--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <p class="header-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel eleifend diam, tempus accumsan neque. Praesent quis dolor.</p>
         <div class="header-app-stores-buttons">
             <article class="app-store-button">
-                <img src="IMG/apple-logo.png" alt="">
+                <img class="store-image" src="IMG/apple-logo.png" alt="">
                 <p>App Store</p>
             </article>
             <article class="google-play-button">
-                <img src="IMG/google-logo.png" alt="">
+                <img class="store-image" src="IMG/google-logo.png" alt="">
                 <p>Google Play</p>
             </article>
         </div>
