--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <header class="block-header">
+
         <nav class="header-nav">
-            <div>
-                <img src="IMG/zocom-logo.png" alt="">
+            <div class="nav-bar-logo">
+                <img class="zocom-logo" src="IMG/zocom-logo.png" alt="">
             </div>
             <div class="nav-bar-buttons">
                 <p class="nav-bar-button">HOME</p>
@@ -24,20 +25,25 @@
                 <button class="nav-bar-quote">Get A QUOTE</button>
             </div>
         </nav>
-        <h2 class="header-h2">Download our App</h2>
-        <p class="header-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel eleifend diam, tempus accumsan neque. Praesent quis dolor.</p>
-        <div class="header-app-stores-buttons">
-            <article class="app-store-button">
-                <img class="store-image" src="IMG/apple-logo.png" alt="">
-                <p>App Store</p>
-            </article>
-            <article class="google-play-button">
-                <img class="store-image" src="IMG/google-logo.png" alt="">
-                <p>Google Play</p>
-            </article>
-        </div>
-        <img class="img-phone" src="IMG/phone.png" alt="">
-        <h2 class="our-products">Our products</h2>
+
+        <section class="header-content">
+            <h2 class="header-h2">Download our App</h2>
+            <p class="header-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vel eleifend diam, tempus accumsan neque. Praesent quis dolor.</p>
+        
+            <div class="header-app-stores-buttons">
+                <article class="app-store-button">
+                    <img class="store-image" src="IMG/apple-logo.png" alt="">
+                    <p>App Store</p>
+                </article>
+                <article class="google-play-button">
+                    <img class="store-image" src="IMG/google-logo.png" alt="">
+                    <p>Google Play</p>
+                </article>
+            </div>
+
+            <img class="img-phone" src="IMG/phone.png" alt="">
+            <h2 class="our-products">Our products</h2>
+         </section>
     </header>
     <main></main>
     <footer></footer>
